# Django_project_lessons

./: db.sqlite3  pyproject.toml
Django_project/: settings.py  urls.py
Vacancy/: admin.py  apps.py  models.py  views.py
Vacancy/migrations/: 0001_initial.py
